<resources>
    <string name="app_name">Dictionary - Client</string>
    <string name="title_main_activity">Enter a word below and tap "search":</string>
    <string name="label_server">Server:</string>
    <string name="label_socket" translatable="false">0.0.0.0:1234</string>
    <string name="label_msg">Word</string>
    <string name="label_answer">Meaning</string>
    <string name="label_search">Search</string>

    <string name="exemplo" translatable="false">_</string>

    <string name="word">Word:</string>
    <string name="meaning">Meaning:</string>
    <string name="word_not_found">word not found</string>
    <string name="add_word">Add word</string>
    <string name="list_words">List Words</string>
    <string name="insert_word">Insert Word</string>

    <string name="word_inserted">Word Inserted</string>
    <string name="error">Error</string>
    <string name="server_error">cannot reach server</string>
    <string name="progress_tittle_search">Searching Word</string>
    <string name="wait">Please Wait</string>
    <string name="no_words_yet">No Words Here!</string>
    <string name="clear_words">Clear Words</string>
    <string name="clear_words_success">Words have been cleared</string>
    <string name="exit">Exit</string>
</resources>
